--- a/coffee1-gh-pages/templates/checkout.html
+++ b/coffee1-gh-pages/templates/checkout.html
@@ -12,7 +12,6 @@
 
             <div class="col-md-7 col-sm-12 text-center ftco-animate">
             	<span class="subheading">Checkout</span>
-	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Checkout</span></p>
             </div>
 
           </div>
@@ -29,8 +28,8 @@
           <div class="row align-items-end">
             <div class="col-md-12">
               <div class="form-group">
-                <label for="firstname">First Name</label>
-                <input type="text" name="first_name" class="form-control" placeholder="">
+                <label id="firstname">Name</label>
+                <input type="text" name="first_name" class="form-control" placeholder="Please Enter Your Name">
               </div>
             </div>
             <div class="col-md-6">
@@ -39,31 +38,21 @@
             <div class="w-100"></div>
             <div class="col-md-12">
               <div class="form-group">
-                <label for="country">Location</label>
-                <div class="select-wrap">
-                  <div class="icon"><span class="ion-ios-arrow-down"></span></div>
-                  <select name="location" id="" class="form-control">
-                    <option value="SME Bank">SME Bank</option>
-                    <option value="Bank Rakyat">Bank Rakyat</option>
-                    <option value="Petronas">Petronas</option>
-                    <option value="YAB">YAB</option>
-                    <option value="BSN">BSN</option>
-                    <option value="Grantt">Grantt</option>
-                  </select>
-                </div>
+                <label id="country">Location</label>
+                <input type="text" name="location" class="form-control" placeholder="Please Enter Your Location">
               </div>
             </div>
             <div class="w-100"></div>
             <div class="col-md-6">
               <div class="form-group">
-                <label for="phone">Phone</label>
-                <input type="text" name="phone" class="form-control" placeholder="">
+                <label id="phone">Phone</label>
+                <input type="text" name="phone" class="form-control" placeholder="e.g. 012 345 6789">
               </div>
             </div>
             <div class="col-md-6">
               <div class="form-group">
-                <label for="emailaddress">Email Address</label>
-                <input type="text" name="email_address" class="form-control" placeholder="">
+                <label id="emailaddress">Email Address</label>
+                <input type="text" name="email_address" class="form-control" placeholder="e.g. email@address.com">
               </div>
             </div>
             <div class="w-100"></div>
