--- a/coffee1-gh-pages/templates/cart.html
+++ b/coffee1-gh-pages/templates/cart.html
@@ -5,14 +5,13 @@
 
     <section class="home-slider owl-carousel">
 
-      <div class="slider-item" style="background-image: url(../static/images/bg_3.jpg);" data-stellar-background-ratio="0.5">
+      <div class="slider-item" style="background-image: url(../static/images/cart.jpg);" data-stellar-background-ratio="0.5">
       	<div class="overlay"></div>
         <div class="container">
           <div class="row slider-text justify-content-center align-items-center">
 
             <div class="col-md-7 col-sm-12 text-center ftco-animate">
             	<span class="subheading">Cart</span>
-	            <p class="breadcrumbs"><span class="mr-2"><a href="index.html">Home</a></span> <span>Cart</span></p>
             </div>
 
           </div>
