--- a/coffee1-gh-pages/templates/index.html
+++ b/coffee1-gh-pages/templates/index.html
@@ -212,18 +212,18 @@
         <div class="row justify-content-center"> <!-- Modified line: Added justify-content-center -->
             <div class="col-md-3">
                 <div class="menu-entry">
-                    <a href="#" class="img" style="background-image: url(../static/images/original.jpg);"></a>
+                    <a class="img" style="background-image: url(../static/images/original.jpg);"></a>
                     <div class="text text-center pt-4">
-                        <h3><a href="#">Original</a></h3>
+                        <h3><a>Original</a></h3>
                     </div>
                 </div>
             </div>
 
             <div class="col-md-3">
                 <div class="menu-entry">
-                    <a href="#" class="img" style="background-image: url(../static/images/NesCaramel.jpg);"></a>
+                    <a class="img" style="background-image: url(../static/images/NesCaramel.jpg);"></a>
                     <div class="text text-center pt-4">
-                        <h3><a href="#">Caramel</a></h3>
+                        <h3><a>Caramel</a></h3>
                     </div>
                 </div>
             </div>
